fixed select overflows + anim

--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -164,6 +164,8 @@ button.select {
     .select-options {
       opacity: 1;
       visibility: visible;
+      max-height: 9999px;
+      transition-delay: 0s, 0.001s, 0.001s;
     }
   }
 }
@@ -177,12 +179,15 @@ button.select {
   padding: $paddingSmall;
   opacity: 0;
   visibility: hidden;
-  transition-property: opacity, visibility;
-  transition-duration: $transition, $transition;
-  transition-timing-function: ease, ease;
+  transition-property: max-height, opacity, visibility;
+  transition-duration: 0s, $transition, $transition;
+  transition-timing-function: linear, ease, ease;
+  transition-delay: $transition, 0s, 0s;
   position: absolute;
   width: calc(100% - $paddingSmall);
   z-index: 1;
+  max-height: 0px;
+  overflow: hidden;
 
   .select-option,
   .pac-item {
